# miniwdl-omics-run

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  release.sh  setup.cfg
miniwdl_omics_run/: __main__.py
miniwdl_omics_submit/: __main__.py
test/: TestFlow.wdl
