[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "miniwdl-omics-run"
description = "Command-line interface for running WDL workflows on Amazon Omics"
dynamic = ["version"]
readme = "./README.md"
dependencies = [
  "miniwdl>=1.9.1,<2",
  "boto3>=1.26.42",
]
requires-python = "~=3.8"
urls = { repository = "https://github.com/miniwdl-ext/miniwdl-omics-run.git" }
classifiers = ["License :: OSI Approved :: MIT License"]

[project.optional-dependencies]
# pip install -e .[dev]
dev = [
  "setuptools>=61.0.0",
  "pre-commit",
  "black",
  "ruff",
  "twine"
]

[tool.setuptools_scm]
write_to = "miniwdl_omics_run/_version.py"

[tool.setuptools.dynamic]
version = {attr = "miniwdl_omics_run._version.__version__"}

[tool.ruff]
select = ["E", "F", "I"]
line-length = 88
